--- a/experiment-2/analysis/stats/variability.Rmd
+++ b/experiment-2/analysis/stats/variability.Rmd
@@ -74,6 +74,8 @@ ggline(ioi_dyn_seq_each, x = "Interval", y = "Mean", add = "mean_se", shape = "C
 ## Coefficient of Variation
 ```{r, echo = FALSE}
 ioi_cv_trial <- dt_ioi[, .(N = .N, Mean = mean(normIOI), SD = sd(normIOI), CV = sd(normIOI)/mean(normIOI)), by = .(SubNr, Condition, Skill, BlockNr, TrialNr)]
+setorder(ioi_cv_trial, "SubNr", "Condition", "Skill")
+
 ioi_cv_subject <- ioi_cv_trial[, .(N = .N, MeanCV = mean(CV), SD = sd(CV)), by = .(SubNr, Condition, Skill)]
 ioi_cv_subject <- ioi_cv_subject[order(SubNr, Condition, Skill)] # ordering
 ioi_cv <- ioi_cv_subject[, .(N = .N, MeanCV = mean(MeanCV), MedianCV = median(MeanCV), SD = sd(MeanCV), IQR = IQR(MeanCV)), by = .(Condition, Skill)]
