--- a/experiment-2/analysis/teaching/teaching_ioi.Rmd
+++ b/experiment-2/analysis/teaching/teaching_ioi.Rmd
@@ -61,7 +61,7 @@ dt_ioi_dyn <- dt_ioi[Skill == "dynamics"]
 
 ```{r ioi-art, echo = FALSE}
 # For each individual
-ioi_art_trial <- dt_ioi_art[, .(N = .N, Mean = mean(IOI), SD = sd(IOI)), by = .(SubNr, Condition, Skill, BlockNr, TrialNr)]
+ioi_art_trial <- dt_ioi_art[, .(N = .N, Mean = mean(normIOI), SD = sd(normIOI)), by = .(SubNr, Condition, Skill, BlockNr, TrialNr)]
 setorder(ioi_art_trial, "SubNr", "Condition", "Skill")
 
 ioi_art <- ioi_art_trial[, .(N = .N, Mean = mean(Mean), SD = sd(Mean)), by = .(SubNr, Condition, Skill)]
@@ -83,12 +83,12 @@ ioi_art_all
 
 ### Plot
 #### Box plot
-- A dashed line represents the tempo given by a metronome (80bpm / IOI-188ms).
+A dashed line represents the tempo given by a metronome.
 
 ```{r ioi-art-all-box, echo = FALSE}
 ioi_art_plot <- data.table(subject = ioi_art[Condition == "teaching"]$SubNr, teaching = ioi_art[Condition == "teaching"]$Mean, performing = ioi_art[Condition == "performing"]$Mean, teachingexp = dt_2_included$TeachingPiano, teachingyears = dt_2_included$TeachingPianoYears)
 
-ggpaired(ioi_art_plot, cond1 = "performing", cond2 = "teaching", color = "condition", facet.by = "teachingexp", line.size = 0.3, line.color = "gray", xlab = "Condition", ylab = "IOIs (ms)", title = "IOI: Articulation")
+ggpaired(ioi_art_plot, cond1 = "performing", cond2 = "teaching", color = "condition", facet.by = "teachingexp", line.size = 0.3, line.color = "gray", xlab = "Condition", ylab = "Normalised IOIs", title = "IOI: Articulation") + geom_hline(yintercept = 1, linetype = "dashed")
 ```
 
 # IOI-Dynamics
@@ -97,7 +97,7 @@ ggpaired(ioi_art_plot, cond1 = "performing", cond2 = "teaching", color = "condit
 
 ```{r ioi-dyn, echo = FALSE}
 # For each individual
-ioi_dyn_trial <- dt_ioi_dyn[, .(N = .N, Mean = mean(IOI), SD = sd(IOI)), by = .(SubNr, Condition, Skill, BlockNr, TrialNr)]
+ioi_dyn_trial <- dt_ioi_dyn[, .(N = .N, Mean = mean(normIOI), SD = sd(normIOI)), by = .(SubNr, Condition, Skill, BlockNr, TrialNr)]
 setorder(ioi_dyn_trial, "SubNr", "Condition", "Skill")
 
 ioi_dyn <- ioi_dyn_trial[, .(N = .N, Mean = mean(Mean), SD = sd(Mean)), by = .(SubNr, Condition, Skill)]
@@ -119,12 +119,12 @@ ioi_dyn_all
 
 ### Plot
 #### Box plot
-- A dashed line represents the tempo given by a metronome (80bpm / IOI-188ms).
+A dashed line represents the tempo given by a metronome.
 
 ```{r ioi-dyn-all-box, echo = FALSE}
 ioi_dyn_plot <- data.table(subject = ioi_dyn[Condition == "teaching"]$SubNr, teaching = ioi_dyn[Condition == "teaching"]$Mean, performing = ioi_dyn[Condition == "performing"]$Mean, teachingexp = dt_2_included$TeachingPiano, teachingyears = dt_2_included$TeachingPianoYears)
 
-ggpaired(ioi_dyn_plot, cond1 = "performing", cond2 = "teaching", color = "condition", facet.by = "teachingexp", line.size = 0.3, line.color = "gray", xlab = "Condition", ylab = "IOIs (ms)", title = "IOI: Dynamics")
+ggpaired(ioi_dyn_plot, cond1 = "performing", cond2 = "teaching", color = "condition", facet.by = "teachingexp", line.size = 0.3, line.color = "gray", xlab = "Condition", ylab = "Normalised IOIs", title = "IOI: Dynamics") + geom_hline(yintercept = 1, linetype = "dashed")
 ```
 
 ```{r export, include = FALSE}
